--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: bash
 services: docker
 
 env:
+  - VERSION=3.7 VARIANT=buster
+  - VERSION=3.7 VARIANT=buster/slim
   - VERSION=3.7 VARIANT=stretch
   - VERSION=3.7 VARIANT=stretch/slim
   - VERSION=3.7 VARIANT=alpine3.8
